# chess

./: .gitignore  CLAUDE.md  CMakeLists.txt  grader_submission_main.cpp  main.cpp  protocol.md  sprite_demo.cpp  sprite_demo.cpp.cpp  ter
audio/: AudioPlayer.cpp  AudioPlayer.hpp  GameEventDetector.cpp  GameEventDetector.hpp  SoundLibrary.hpp
engine/: GameEngine.cpp  GameEngine.hpp  GameSnapshot.cpp  GameSnapshot.hpp
input/: BoardMapper.cpp  BoardMapper.hpp  Controller.cpp  Controller.hpp
io/: BoardFormat.hpp  BoardParser.cpp  BoardParser.hpp  BoardPrinter.cpp  BoardPrinter.hpp
kungfu_chess/: CMakeLists.txt
kungfu_chess/include/core/: MovementValidator.hpp
kungfu_chess/include/engine/: game_engine.hpp
kungfu_chess/include/input/: board_mapper.hpp  controller.hpp
kungfu_chess/include/io/: board_parser.hpp  board_printer.hpp
kungfu_chess/include/model/: board.hpp  game_state.hpp  piece.hpp  position.hpp
kungfu_chess/include/realtime/: motion.hpp  real_time_arbiter.hpp
kungfu_chess/include/rules/: piece_rules.hpp  rule_engine.hpp
kungfu_chess/include/view/: image_view.hpp  renderer.hpp
kungfu_chess/src/: main.cpp
kungfu_chess/src/core/: Board.cpp
kungfu_chess/src/io/: board_parser.cpp  board_printer.cpp
kungfu_chess/src/model/: board.cpp  piece.cpp  position.cpp
kungfu_chess/tests/: test_board.cpp  test_engine.cpp  test_main.cpp  test_movement.cpp  test_pieces.cpp
model/: Board.cpp  Board.hpp  GameState.hpp  Piece.cpp  Piece.hpp  PieceMove.hpp  Position.cpp  Position.hpp
my_chess_project/: .gitignore  CMakeLists.txt
my_chess_project/include/core/: Board.hpp  GameController.hpp  GameEngine.hpp  MovementValidator.hpp
my_chess_project/src/: main.cpp
my_chess_project/src/core/: Board.cpp  GameController.cpp  GameEngine.cpp  MovementValidator.cpp
my_chess_project/tests/: test_movement.cpp  test_pawns.cpp
network/: SnapshotAdapter.hpp  game_client.cpp  game_server.cpp  protocol_demo_client.cpp  protocol_demo_server.cpp  ws_echo_client.cpp  ws_echo_server.cpp
network/protocol/: JsonCodec.cpp  JsonCodec.hpp  MessageTypes.hpp  Messages.hpp
network/win32_ui/: LoginWindow.cpp  LoginWindow.hpp
persistence/: Database.cpp  Database.hpp  UserRepository.cpp  UserRepository.hpp  persistence_demo.cpp
realtime/: RealTimeArbiter.cpp  RealTimeArbiter.hpp
rules/: PieceRules.cpp  PieceRules.hpp  RuleEngine.cpp  RuleEngine.hpp  config.hpp
src/: main.cpp
src/BoardParser/: BoardParser.cpp  BoardParser.hpp
src/Pieces/: Piece.hpp
src/Utils/: Position.hpp
tests/: Board.tests.cpp  Config.tests.cpp  Engine.tests.cpp  Movement.tests.cpp  Piece.tests.cpp
texttests/: ScriptRunner.cpp  ScriptRunner.hpp
view/: GameSnapshope.cpp  GameSnapshot.hpp  SpriteLoader.cpp  SpriteLoader.hpp  image_view.cpp  img.cpp  img.hpp  renderer.cpp  renderer.hpp
